<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        android:gravity="center"
        android:textSize="26dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/first"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button2"
        android:text="@string/second"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button3"
        android:onClick="lucky"
        android:text="@string/third"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button4"
        android:text="@string/forth"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button5"
        android:text="@string/fifth"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button6"
        android:text="@string/sixth"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:id="@+id/button7"
        android:layout_marginTop="30dp"
        android:text="@string/seventh"/>

    <Button
        android:id="@+id/button8"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/eighth" />


</LinearLayout>